--- a/trainmeup/trainmeup-web/src/app/question/question.component.html
+++ b/trainmeup/trainmeup-web/src/app/question/question.component.html
@@ -1,53 +1,51 @@
 <div class="6u 12u$(medium)">
 	<h3>New Question</h3>
+
+	<!-- Choose category section -->
 	<h4>Choose category:</h4>
 	<div class="4u 12u$(small)">
-		<input type="radio" id="new" name="category" checked="">
+		<input #new id="new" type="radio" name="category" checked="">
 		<label for="new">New</label>
 	</div>
 	<ul class="actions">
-		<li><a routerLink="/categories" class="button">See categories</a></li>
+		<li><button class="button" (click)="openCategories()" [disabled]="isCategNewDisabled()">See categories</button></li>
 	</ul>
-	Location: /root/backend/java/
-	<input type="text" name="newcategory" placeholder="Enter new category"><br>
+	Location: <span #categPathNew></span>
+	<input #newText type="text" name="newcategory" placeholder="Enter new category" [disabled]="isCategNewDisabled()"><br>
+
+
 	<div class="4u 12u$(small)">
-		<input type="radio" id="select" name="category">
+		<input #select id="select" type="radio" name="category">
 		<label for="select">Select</label>
 	</div>
 	<ul class="actions">
-		<li><a routerLink="/categories" class="button">Select category</a></li>
+		<li><button class="button" (click)="openCategories()" [disabled]="isCategSelectDisabled()">Select category</button></li>
 	</ul>
-	Location: /root/backend/java/
-	<!-- <div class="select-wrapper">
-	  	<select name="categories">
-		    <option value="volvo">Spring</option>
-		    <option value="saab">Java</option>
-		    <option value="fiat">Cloud</option>
-		    <option value="audi">AI</option>
-	  	</select>
-  	</div> -->
+	Location: <span #categPathSelect></span>
   	<hr>
+
+  	<!-- Question edit section -->
   	<h4>Question:</h4>
-  	<textarea name="question" rows="10" cols="60" placeholder="Enter new question"></textarea>
+  	<textarea #questionText name="question" rows="6" cols="60" placeholder="Enter new question"></textarea>
   	<br>
   	<h4>Answer:</h4>
   	<div class="4u 12u$(small)">
-		<input type="radio" id="singlechoice" name="answer" checked="">
+		<input #ansSingle type="radio" id="singlechoice" name="answer" checked="">
 		<label for="singlechoice">Single answer</label>
 	</div>
-  	<textarea name="answer" rows="10" cols="60" placeholder="Enter the answer"></textarea><br>
+  	<textarea #ansSingleText name="answer" rows="6" cols="60" placeholder="Enter the answer" [disabled]="isAnsSingleDisabled()"></textarea><br>
   	<div class="4u 12u$(small)">
-		<input type="radio" id="multichoice" name="answer">
+		<input #ansMulti type="radio" id="multichoice" name="answer">
 		<label for="multichoice">Multi-choice</label>
 	</div>
 	<div>
-	  	<input type="text" name="op1" placeholder="Choice 1"><br>
-	  	<input type="text" name="op2" placeholder="Choice 2"><br>
-	  	<input type="text" name="op3" placeholder="Choice 3"><br>
+	  	<input #ansMultiText1 type="text" name="op1" placeholder="Choice 1" [disabled]="isAnsMultiDisabled()"><br>
+	  	<input #ansMultiText2 type="text" name="op2" placeholder="Choice 2" [disabled]="isAnsMultiDisabled()"><br>
+	  	<input #ansMultiText3 type="text" name="op3" placeholder="Choice 3" [disabled]="isAnsMultiDisabled()"><br>
   	</div>
   	
   	<ul class="actions">
-		<li><button type="button" class="button default">Cancel</button></li>
+		<li><button type="button" class="button default" (click)="goBack()">Cancel</button></li>
 		<li><button type="button" class="button special">Save</button></li>
 	</ul>
 </div>
