--- a/trainmeup/trainmeup-web/src/app/question/question.component.html
+++ b/trainmeup/trainmeup-web/src/app/question/question.component.html
@@ -46,7 +46,7 @@
   	
   	<ul class="actions">
 		<li><button type="button" class="button default" (click)="goBack()">Cancel</button></li>
-		<li><button type="button" class="button special">Save</button></li>
+		<li><button type="button" class="button special" (click)="saveQuestion()">Save</button></li>
 	</ul>
 </div>
 
