added hit call to warmup

--- a/trainmeup/trainmeup-web/src/app/answer/answer.component.html
+++ b/trainmeup/trainmeup-web/src/app/answer/answer.component.html
@@ -21,7 +21,7 @@
   <!-- Answer section -->
   <div *ngIf="showAnswer">
   	<h4>Answer:</h4>
-  	<textarea #ansSingleText name="answer" rows="6" cols="60" [disabled]="true"></textarea><br>
+  	<textarea #ansSingleText name="answer" rows="6" cols="60" [disabled]="true" [value]="question.answer"></textarea><br>
   	<p>Your guess was:</p>
     <div class="4u 12u$(small)">
       <input #correct id="correct" type="radio" name="result" checked="">
