Now several categories can be saved at once

--- a/trainmeup/trainmeup-web/src/app/question/question.component.html
+++ b/trainmeup/trainmeup-web/src/app/question/question.component.html
@@ -11,7 +11,7 @@
 		<li><button class="button" (click)="openCategories()" [disabled]="isCategNewDisabled()">See categories</button></li>
 	</ul>
 	Location: <span #categPathNew></span>
-	<input #newText type="text" name="newcategory" placeholder="Enter new category" [disabled]="isCategNewDisabled()"><br>
+	<input #newText type="text" name="newcategory" placeholder="Enter new category (format is either AAA/ or AAA/BBB/CCC/)" [disabled]="isCategNewDisabled()"><br>
 
 
 	<div class="4u 12u$(small)">
