--- a/trainmeup/trainmeup-web/src/app/dashboard/dashboard.component.html
+++ b/trainmeup/trainmeup-web/src/app/dashboard/dashboard.component.html
@@ -2,4 +2,5 @@
 <ul class="actions">
 	<li><a routerLink="/newquestion" class="button">New Question</a></li>
 	<li><a routerLink="/answer" class="button">Warmup</a></li>
+	<li><button type="button" class="button special" (click)="test()">Test</button></li>
 </ul>
