header title redirect to dashboard

--- a/trainmeup/trainmeup-web/src/app/app.component.html
+++ b/trainmeup/trainmeup-web/src/app/app.component.html
@@ -1,7 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h2>
-    {{ title }}
-</h2>
+<a routerLink="/"><h2>{{ title }}</h2></a>
 <div id="main">
   <section class="wrapper style1">
       <div class="inner">
