--- a/trainmeup/trainmeup-web/src/app/dashboard/dashboard.component.html
+++ b/trainmeup/trainmeup-web/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>Dashboard</h3>
 <ul class="actions">
 	<li><a routerLink="/newquestion" class="button">New Question</a></li>
-	<li><a routerLink="/answer" class="button">Warmup</a></li>
+	<li><a routerLink="/warmup" class="button">Warmup</a></li>
 	<li><button type="button" class="button special" (click)="test()">Test</button></li>
 </ul>
